<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <string name="general_label_text">OR</string>
    <string name="general_loading">Loading…</string>

    <!--Image View-->
    <string name="logo_image_content_description">logo</string>

    <!--Login Screen-->
    <string name="login_button_text">Login</string>
    <string name="login_label_signupnav_text">Sign Up with Email</string>

    <string name="login_error_emailEmpty">Please fill your email field</string>
    <string name="login_error_invalidEmail">Invalid email format</string>
    <string name="login_error_passwordEmpty">Please fill your password field</string>
    <string name="login_error_invalidPassword">Should have at least 6 alphanumeric characters</string>

    <string name="login_hint_email_text">Enter your Email</string>
    <string name="login_hint_password_text">Enter your password</string>

    <!--Sign Up Screen-->
    <string name="signup_hint_name_text">Enter your full name</string>
    <string name="signup_button_signup_text">Sign up</string>
    <string name="signup_label_loginnavigation_text">Login with Email</string>

    <string name="signup_error_emailEmpty">Please fill your email field</string>
    <string name="signup_error_invalidEmail">Invalid email format, Please check your email again</string>
    <string name="signup_error_passwordEmpty">Please fill your password field</string>
    <string name="signup_error_invalidPassword">Should have at least 6 alphanumeric characterr</string>
    <string name="signup_error_nameEmpty">Please fill your name field</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_create">create</string>
    <string name="menu_profile">profile</string>
    <string name="menu_confirm">confirm</string>
    <string name="general_toolbar_logo">toolbar_logo</string>

    <!--Feed Screen-->
    <string name="feed_likes_format">%d likes</string>
    <string name="feed_favourite_animation_url">https://assets9.lottiefiles.com/packages/lf20_ELfTW0.json</string>

    <!--Profile Screen-->
    <string name="profile_editProfile_text">Edit Profile</string>
    <string name="profile_title">Profile</string>
    <string name="profile_post_count_format">%d Posts</string>
    <string name="profile_logout">Logout</string>

    <!--Edit Profile-->
    <string name="editprofile_change_photo_text">Change Photo</string>
    <string name="editprofile_bio_text">Bio</string>
    <string name="editprofile_private_information_text">Private information</string>
    <string name="editprofile_email_hint">Email Address</string>
    <string name="editprofile_name_text">Name</string>
    <string name="editprofile_title">Edit Profile</string>
    <string name="editprofile_empty_field">Need to fill at least one field</string>
    <string name="editprofile_success_text">Success update your information</string>
    <string name="editprofile_select_image">Please try again</string>
    <string name="todo">TODO</string>

    <!--Create Post-->
    <string name="createPost_tryAgain_text">Please try again</string>
    <string name="createPost_gallery_text">Gallery</string>
    <string name="createPost_camera_text">Camera</string>
</resources>
