<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_image_content_description"
            android:src="@drawable/ic_profile_signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_42dp"
            android:hint="@string/signup_hint_name_text"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginBottom="@dimen/space_16dp"
            android:hint="@string/login_hint_email_text"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_16dp"
            android:hint="@string/login_hint_password_text"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/signup_button_signup_text" />

        <FrameLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_42dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_gravity="center"
                android:background="@color/grey_light" />

            <TextView
                style="@style/AppTheme.Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/space_16dp"
                android:paddingEnd="@dimen/space_16dp"
                android:text="@string/general_label_text"
                android:textColor="@color/grey" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_login_navigation"
            style="@style/AppTheme.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24dp"
            android:text="@string/signup_label_loginnavigation_text"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
