<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:padding="@dimen/space_30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/login_hint_password_text"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/container_password"
            android:layout_marginBottom="@dimen/space_16dp"
            android:hint="@string/login_hint_email_text"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_image_height"
            android:layout_above="@id/container_email"
            android:layout_marginBottom="@dimen/space_42dp"
            android:contentDescription="@string/logo_image_content_description"
            android:src="@drawable/instagram_logo" />

        <Button
            android:id="@+id/btn_login"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_password"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/login_button_text" />

        <FrameLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="@dimen/space_42dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_gravity="center"
                android:background="@color/grey_light" />

            <TextView
                style="@style/AppTheme.Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/space_16dp"
                android:paddingEnd="@dimen/space_16dp"
                android:text="@string/general_label_text"
                android:textColor="@color/grey" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_signup_navigation"
            style="@style/AppTheme.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_16dp"
            android:text="@string/login_label_signupnav_text"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
